--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,9 @@ $mainFont: red;
 body {
     font-family: 'Lato', sans-serif;
     background-image: url('./../assets/template.jpg');
-    background-size: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position-x: center;
 }
 
 p {
@@ -27,7 +29,7 @@ a {
         font-weight: 400;
         color: $mainFont;
         margin: 0 auto;
-        max-width: 1000px;
+        max-width: 1336px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -35,29 +37,31 @@ a {
 }
 
 .logo { 
-    margin: 18px 0px;
+    margin: 24px 0px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     &__icon {
-        width: 32px;
-        height: 32px;
-        line-height: 28px;
+        width: 44px;
+        height: 44px;
+        line-height: 44px;
         text-align: center;
-        font-size: 24px;
-        margin-right: 20px;
+        font-size: 30px;
+        margin-right: 30px;
         border: 2px solid $mainFont;
         border-radius: 50%;
     }
     &__title {
-        letter-spacing: 6px;
-        font-size: 16px;    
+        letter-spacing: 8px;
+        font-size: 20px;    
     }
 }
 
 .navigation {
     &__item {
-        margin-left: 20px;
+        font-size: 20px;
+        margin-left: 16px;
+        letter-spacing: 2px;
     }
 }
 
