--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -68,7 +68,7 @@ a {
 .top-header {
   width: 100vw;
   background-image: linear-gradient(rgba(0, 66, 123, 0.8), rgba(0, 66, 123, 0));
-  padding-bottom: 162px; }
+  padding-bottom: 161px; }
   .top-header__content {
     font-weight: 400;
     color: red;
@@ -84,9 +84,9 @@ a {
   justify-content: flex-start;
   align-items: center; }
   .logo__icon {
-    width: 44px;
-    height: 44px;
-    line-height: 44px;
+    width: 46px;
+    height: 46px;
+    line-height: 46px;
     text-align: center;
     font-size: 30px;
     margin-right: 30px;
@@ -98,27 +98,31 @@ a {
 
 .navigation__item {
   font-size: 20px;
-  margin-left: 24px;
-  letter-spacing: 1.2px; }
+  margin-left: 22px;
+  letter-spacing: 1.4px; }
 
 .title-section {
   max-width: 1112px;
+  height: 820px;
+  border: 1px solid lime;
   text-align: left;
   margin: 0 auto;
+  position: relative;
   color: red; }
   .title-section__subheading {
     text-transform: uppercase;
     color: red;
     font-size: 30px;
     letter-spacing: 1.6px;
-    margin-bottom: 22px; }
+    margin-bottom: 20px; }
   .title-section__heading {
     text-transform: uppercase;
     color: red;
     font-weight: 700;
-    font-size: 180px;
-    letter-spacing: -10px;
-    margin-bottom: 48px; }
+    font-size: 182px;
+    letter-spacing: -9px;
+    margin-bottom: 46px;
+    margin-left: -10px; }
   .title-section__paragraph {
     width: 800px;
     line-height: 24px;
@@ -137,5 +141,11 @@ a {
   font-size: 16px; }
 
 .see-more {
-  display: inline-block;
-  color: limegreen; }
+  letter-spacing: -.6px;
+  text-transform: uppercase;
+  display: block;
+  color: limegreen;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 56px;
+  left: 47%; }
