--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,7 @@ a {
 .top-header {
     width: 100vw;
     background-image: linear-gradient(rgba(0, 66, 123, .8),rgba(0, 66, 123, 0));
-    padding-bottom: 162px;
+    padding-bottom: 161px;
     &__content {
         font-weight: 400;
         color: $mainFont;
@@ -43,9 +43,9 @@ a {
     justify-content: flex-start;
     align-items: center;
     &__icon {
-        width: 44px;
-        height: 44px;
-        line-height: 44px;
+        width: 46px;
+        height: 46px;
+        line-height: 46px;
         text-align: center;
         font-size: 30px;
         margin-right: 30px;
@@ -61,8 +61,8 @@ a {
 .navigation {
     &__item {
         font-size: 20px;
-        margin-left: 24px;
-        letter-spacing: 1.2px;
+        margin-left: 22px;
+        letter-spacing: 1.4px;
     }
 }
 
@@ -70,23 +70,27 @@ a {
 
 .title-section {
     max-width: 1112px;
+    height: 820px;
+    border: 1px solid lime;
     text-align: left;
     margin: 0 auto;
+    position: relative;
     color: $mainFont;
     &__subheading {
         text-transform: uppercase;
         color: $mainFont;
         font-size: 30px;
         letter-spacing: 1.6px;
-        margin-bottom: 22px;
+        margin-bottom: 20px;
     }
     &__heading {
         text-transform: uppercase;
         color: $mainFont;
         font-weight: 700;
-        font-size: 180px;
-        letter-spacing: -10px;
-        margin-bottom: 48px;
+        font-size: 182px;
+        letter-spacing: -9px;
+        margin-bottom: 46px;
+        margin-left: -10px;
     }
     &__paragraph {
         width: 800px;
@@ -109,6 +113,12 @@ a {
 }
 
 .see-more {
-    display: inline-block;
+    letter-spacing: -.6px;
+    text-transform: uppercase;
+    display: block;
     color: limegreen;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 56px;
+    left: 47%;
 }
