--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -51,6 +51,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+* {
+  box-sizing: border-box; }
+
 body {
   font-family: 'Lato', sans-serif;
   background-image: url("./../assets/template.jpg");
@@ -84,9 +87,9 @@ a {
   justify-content: flex-start;
   align-items: center; }
   .logo__icon {
-    width: 46px;
-    height: 46px;
-    line-height: 46px;
+    width: 50px;
+    height: 50px;
+    line-height: 44px;
     text-align: center;
     font-size: 30px;
     margin-right: 30px;
@@ -104,9 +107,8 @@ a {
 .title-section {
   max-width: 1112px;
   height: 820px;
-  border: 1px solid lime;
   text-align: left;
-  margin: 0 auto;
+  margin: 0 auto 110px;
   position: relative;
   color: red; }
   .title-section__subheading {
@@ -134,11 +136,14 @@ a {
   background: none;
   width: 226px;
   height: 46px;
-  line-height: 46px;
   font-weight: 400;
   letter-spacing: 1.2px;
   text-transform: uppercase;
   font-size: 16px; }
+  .button-action:hover {
+    background-color: #00427C;
+    opacity: .3;
+    cursor: pointer; }
 
 .see-more {
   letter-spacing: -.6px;
@@ -149,3 +154,46 @@ a {
   position: absolute;
   bottom: 56px;
   left: 47%; }
+
+.content {
+  padding: 0 280px;
+  margin: 0 auto 166px;
+  text-align: center; }
+  .content__heading {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 78px;
+    letter-spacing: -2px;
+    color: limegreen;
+    margin-bottom: 24px; }
+  .content__subheading {
+    text-transform: uppercase;
+    font-size: 20px;
+    color: limegreen;
+    letter-spacing: 1px;
+    margin-bottom: 28px; }
+  .content__paragraph {
+    color: red;
+    line-height: 24px;
+    font-size: 16px; }
+
+.gallery {
+  margin: 0 auto 400px;
+  display: flex; }
+
+.view {
+  width: 58%; }
+
+.aside-content {
+  width: 42%;
+  padding: 92px 128px; }
+  .aside-content__heading {
+    text-transform: uppercase;
+    font-size: 48px;
+    font-weight: 700;
+    letter-spacing: -2px;
+    color: limegreen;
+    margin-bottom: 28px; }
+  .aside-content__paragraph {
+    color: limegreen;
+    line-height: 24px; }
