--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,12 @@
 
 $mainFont: red;
 $tempColor: limegreen;
+$headerBlue: #00427C;
+$backgroundGrey: #F7F8FA;
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Lato', sans-serif;
@@ -43,9 +49,9 @@ a {
     justify-content: flex-start;
     align-items: center;
     &__icon {
-        width: 46px;
-        height: 46px;
-        line-height: 46px;
+        width: 50px;
+        height: 50px;
+        line-height: 44px;
         text-align: center;
         font-size: 30px;
         margin-right: 30px;
@@ -66,14 +72,11 @@ a {
     }
 }
 
-
-
 .title-section {
     max-width: 1112px;
     height: 820px;
-    border: 1px solid lime;
     text-align: left;
-    margin: 0 auto;
+    margin: 0 auto 110px;
     position: relative;
     color: $mainFont;
     &__subheading {
@@ -105,11 +108,16 @@ a {
     background: none;
     width: 226px;
     height: 46px;
-    line-height: 46px;
+    // line-height: 46px;
     font-weight: 400;
     letter-spacing: 1.2px;
     text-transform: uppercase;
     font-size: 16px;
+    &:hover{
+        background-color: $headerBlue;
+        opacity: .3;
+        cursor: pointer;
+    }
 }
 
 .see-more {
@@ -121,4 +129,59 @@ a {
     position: absolute;
     bottom: 56px;
     left: 47%;
+}
+
+.content {
+    // border: 1px solid darkmagenta;
+    // max-width: 1112px;
+    padding: 0 280px;
+    margin: 0 auto 166px;
+    text-align: center;
+    &__heading {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 78px;
+        letter-spacing: -2px;
+        color: $tempColor;
+        margin-bottom: 24px;
+    }
+    &__subheading {
+        text-transform: uppercase;
+        font-size: 20px;
+        color: $tempColor;
+        letter-spacing: 1px;
+        margin-bottom: 28px;
+    }
+    &__paragraph {
+        color: $mainFont;
+        line-height: 24px;
+        font-size: 16px;
+    }
+}
+
+.gallery {
+    margin: 0 auto 400px;
+    display: flex;
+    // background-color: $backgroundGrey;
+}
+
+.view {
+    width: 58%;
+}
+
+.aside-content {
+    width: 42%;
+    padding: 92px 128px;
+    &__heading {
+        text-transform: uppercase;
+        font-size: 48px;
+        font-weight: 700;
+        letter-spacing: -2px;
+        color: $tempColor;
+        margin-bottom: 28px;
+    }
+    &__paragraph {
+        color: $tempColor;
+        line-height: 24px;
+    }
 }
