--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,7 +2,7 @@
    v5.0.1 | 20191019
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -51,15 +51,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-* {
+html {
   box-sizing: border-box; }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
+
 body {
-  font-family: 'Lato', sans-serif;
-  background-image: url("./../assets/template.jpg");
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position-x: center; }
+  font-family: 'Lato', sans-serif; }
 
 p {
   font-family: 'EB Garamond', serif; }
@@ -68,21 +69,22 @@ a {
   text-decoration: none;
   color: inherit; }
 
-.top-header {
-  width: 100vw;
-  background-image: linear-gradient(rgba(0, 66, 123, 0.8), rgba(0, 66, 123, 0));
-  padding-bottom: 161px; }
-  .top-header__content {
-    font-weight: 400;
-    color: red;
-    margin: 0 auto;
+.header {
+  width: 100%;
+  height: 100vh;
+  background-image: url("./../assets/main-img.jpg");
+  background-size: cover;
+  margin-bottom: 120px; }
+  .header__container {
+    margin: 0 auto 184px;
     max-width: 1336px;
+    padding-top: 24px;
+    color: #F7F8FA;
     display: flex;
-    justify-content: space-between;
-    align-items: center; }
+    align-items: center;
+    justify-content: space-between; }
 
 .logo {
-  margin: 24px 0px;
   display: flex;
   justify-content: flex-start;
   align-items: center; }
@@ -93,7 +95,7 @@ a {
     text-align: center;
     font-size: 30px;
     margin-right: 30px;
-    border: 2px solid red;
+    border: 2px solid #F7F8FA;
     border-radius: 50%; }
   .logo__title {
     letter-spacing: 8px;
@@ -104,35 +106,35 @@ a {
   margin-left: 22px;
   letter-spacing: 1.4px; }
 
-.title-section {
+.hero {
+  height: calc(100vh - 420px);
   max-width: 1112px;
-  height: 820px;
   text-align: left;
-  margin: 0 auto 110px;
+  margin: 0 auto;
   position: relative;
-  color: red; }
-  .title-section__subheading {
+  color: #F7F8FA; }
+  .hero__subheading {
     text-transform: uppercase;
-    color: red;
+    color: #F7F8FA;
     font-size: 30px;
     letter-spacing: 1.6px;
-    margin-bottom: 20px; }
-  .title-section__heading {
+    margin-bottom: 22px; }
+  .hero__heading {
     text-transform: uppercase;
-    color: red;
-    font-weight: 700;
+    color: #F7F8FA;
+    font-weight: 900;
     font-size: 182px;
     letter-spacing: -9px;
     margin-bottom: 46px;
     margin-left: -10px; }
-  .title-section__paragraph {
+  .hero__paragraph {
     width: 800px;
     line-height: 24px;
-    margin-bottom: 48px; }
+    margin-bottom: 50px; }
 
 .button-action {
-  color: limegreen;
-  border: 2px solid limegreen;
+  color: #F7F8FA;
+  border: 2px solid #F7F8FA;
   background: none;
   width: 226px;
   height: 46px;
@@ -149,51 +151,67 @@ a {
   letter-spacing: -.6px;
   text-transform: uppercase;
   display: block;
-  color: limegreen;
+  color: #F7F8FA;
   margin: 0 auto;
   position: absolute;
   bottom: 56px;
-  left: 47%; }
+  left: 47vw; }
 
 .content {
-  padding: 0 280px;
+  max-width: 1112px;
+  padding: 0 120px;
   margin: 0 auto 166px;
   text-align: center; }
   .content__heading {
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 900;
     font-size: 78px;
     letter-spacing: -2px;
-    color: limegreen;
+    color: #00427C;
     margin-bottom: 24px; }
   .content__subheading {
     text-transform: uppercase;
     font-size: 20px;
-    color: limegreen;
+    color: #000;
     letter-spacing: 1px;
     margin-bottom: 28px; }
   .content__paragraph {
-    color: red;
+    color: #000;
     line-height: 24px;
     font-size: 16px; }
 
 .gallery {
+  max-width: 1920px;
   margin: 0 auto 400px;
-  display: flex; }
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: #F7F8FA; }
 
 .view {
-  width: 58%; }
+  width: 56%;
+  border: 1px solid green;
+  position: relative; }
+  .view__main {
+    position: absolute;
+    right: 0;
+    top: -46px;
+    border: 1px solid violet;
+    width: 800px;
+    height: 600px; }
 
 .aside-content {
-  width: 42%;
-  padding: 92px 128px; }
+  width: 44%;
+  padding: 92px 128px;
+  border: 1px solid red; }
   .aside-content__heading {
     text-transform: uppercase;
     font-size: 48px;
-    font-weight: 700;
+    font-weight: 900;
     letter-spacing: -2px;
-    color: limegreen;
+    color: #00427C;
     margin-bottom: 28px; }
   .aside-content__paragraph {
-    color: limegreen;
+    width: 320px;
+    color: #000;
     line-height: 24px; }
