--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -52,7 +52,8 @@ table {
   border-spacing: 0; }
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
 
 *,
 *:before,
@@ -63,11 +64,17 @@ body {
   font-family: 'Lato', sans-serif; }
 
 p {
-  font-family: 'EB Garamond', serif; }
+  font-family: 'EB Garamond', serif;
+  font-size: 18px; }
 
 a {
   text-decoration: none;
   color: inherit; }
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
 
 .header {
   width: 100%;
@@ -104,14 +111,16 @@ a {
 .navigation__item {
   font-size: 20px;
   margin-left: 22px;
-  letter-spacing: 1.4px; }
+  letter-spacing: 1.4px;
+  transition: color .2s ease; }
+  .navigation__item:hover {
+    color: #ccc; }
 
 .hero {
   height: calc(100vh - 420px);
   max-width: 1112px;
   text-align: left;
-  margin: 0 auto;
-  position: relative;
+  margin: 0 auto 100px;
   color: #F7F8FA; }
   .hero__subheading {
     text-transform: uppercase;
@@ -141,21 +150,19 @@ a {
   font-weight: 400;
   letter-spacing: 1.2px;
   text-transform: uppercase;
-  font-size: 16px; }
+  font-size: 16px;
+  transition: background-color .2s ease; }
   .button-action:hover {
-    background-color: #00427C;
-    opacity: .3;
+    background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer; }
 
 .see-more {
   letter-spacing: -.6px;
   text-transform: uppercase;
   display: block;
+  text-align: center;
   color: #F7F8FA;
-  margin: 0 auto;
-  position: absolute;
-  bottom: 56px;
-  left: 47vw; }
+  margin: 0 auto; }
 
 .content {
   max-width: 1112px;
@@ -181,28 +188,59 @@ a {
     font-size: 16px; }
 
 .gallery {
-  max-width: 1920px;
-  margin: 0 auto 400px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  margin-bottom: 120px;
   background-color: #F7F8FA; }
+  .gallery__container {
+    margin: 0 auto;
+    max-width: 1336px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center; }
 
-.view {
+.image-viewer {
   width: 56%;
   border: 1px solid green;
-  position: relative; }
-  .view__main {
-    position: absolute;
-    right: 0;
-    top: -46px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end; }
+  .image-viewer__picture {
     border: 1px solid violet;
-    width: 800px;
+    width: 100%;
     height: 600px; }
+  .image-viewer__thumbnails {
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%; }
+  .image-viewer__thumbnails--item {
+    margin: 20px 0;
+    width: 100px;
+    height: 78px;
+    list-style: none;
+    display: block; }
+  .image-viewer__buttons {
+    font-size: 36px;
+    text-align: center; }
+    .image-viewer__buttons--next {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      background-color: #00427C;
+      color: #F7F8FA; }
+    .image-viewer__buttons--prev {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      background-color: #00427C;
+      color: #F7F8FA; }
+    .image-viewer__buttons:hover {
+      cursor: pointer; }
 
 .aside-content {
   width: 44%;
-  padding: 92px 128px;
+  padding: 92px 120px;
   border: 1px solid red; }
   .aside-content__heading {
     text-transform: uppercase;
@@ -215,3 +253,48 @@ a {
     width: 320px;
     color: #000;
     line-height: 24px; }
+
+.bonus-content {
+  max-width: 1336px;
+  padding: 0 200px 0 0;
+  margin: 0 auto;
+  text-align: left; }
+  .bonus-content__heading {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 78px;
+    letter-spacing: -2px;
+    color: #00427C;
+    margin-bottom: 28px; }
+  .bonus-content__subheading {
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #000;
+    letter-spacing: 1px;
+    margin-bottom: 24px; }
+  .bonus-content__paragraph {
+    color: #000;
+    line-height: 24px;
+    font-size: 18px;
+    padding-bottom: 18px; }
+
+.footer {
+  background-color: #1a262f;
+  color: #F7F8FA; }
+  .footer__container {
+    margin: 0 auto;
+    border: 1px solid red;
+    padding: 24px 0;
+    max-width: 1336px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .footer__logo {
+    width: 60px;
+    height: 60px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 36px;
+    margin-right: 30px;
+    border: 2px solid #F7F8FA;
+    border-radius: 50%; }
