--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -71,11 +71,6 @@ a {
   text-decoration: none;
   color: inherit; }
 
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; }
-
 .header {
   width: 100%;
   height: 100vh;
@@ -114,7 +109,7 @@ img {
   letter-spacing: 1.4px;
   transition: color .2s ease; }
   .navigation__item:hover {
-    color: #ccc; }
+    color: #F7F8FA; }
 
 .hero {
   height: calc(100vh - 420px);
@@ -199,49 +194,58 @@ img {
 
 .image-viewer {
   width: 56%;
-  border: 1px solid green;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-end; }
   .image-viewer__picture {
-    border: 1px solid violet;
     width: 100%;
-    height: 600px; }
+    height: 480px;
+    object-fit: cover;
+    margin: 0 auto; }
   .image-viewer__thumbnails {
-    border: 1px solid red;
     display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
     align-items: center;
-    justify-content: space-around;
-    width: 100%; }
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px 10px; }
   .image-viewer__thumbnails--item {
-    margin: 20px 0;
-    width: 100px;
+    object-fit: cover;
+    margin: 0 10px;
+    max-width: 100px;
     height: 78px;
-    list-style: none;
-    display: block; }
-  .image-viewer__buttons {
+    opacity: .7;
+    transition: .3s; }
+    .image-viewer__thumbnails--item:hover {
+      opacity: 1;
+      cursor: pointer; }
+
+.active {
+  transform: scale(1.1);
+  opacity: 1; }
+
+.buttons-container {
+  position: absolute;
+  top: 440px;
+  right: -40px;
+  display: flex;
+  justify-content: center; }
+  .buttons-container__button {
     font-size: 36px;
-    text-align: center; }
-    .image-viewer__buttons--next {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      background-color: #00427C;
-      color: #F7F8FA; }
-    .image-viewer__buttons--prev {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      background-color: #00427C;
-      color: #F7F8FA; }
-    .image-viewer__buttons:hover {
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    background-color: #00427C;
+    color: #F7F8FA; }
+    .buttons-container__button:hover {
       cursor: pointer; }
 
 .aside-content {
   width: 44%;
-  padding: 92px 120px;
-  border: 1px solid red; }
+  padding: 92px 120px; }
   .aside-content__heading {
     text-transform: uppercase;
     font-size: 48px;
@@ -256,7 +260,7 @@ img {
 
 .bonus-content {
   max-width: 1336px;
-  padding: 0 200px 0 0;
+  padding-right: 200px;
   margin: 0 auto;
   text-align: left; }
   .bonus-content__heading {
