--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -51,15 +51,35 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
+
+body {
+  font-family: 'Lato', sans-serif; }
+
+p {
+  font-family: 'EB Garamond', serif;
+  font-size: 16px; }
+
+a {
+  text-decoration: none;
+  color: inherit; }
+
 .header {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("./../assets/main-img.jpg");
   background-size: cover;
   margin-bottom: 120px; }
   .header__container {
-    margin: 0 auto 184px;
-    max-width: 1336px;
+    margin: 0 auto 144px;
+    max-width: 1280px;
     padding-top: 24px;
     color: #F7F8FA;
     display: flex;
@@ -80,11 +100,11 @@ table {
     border: 2px solid #F7F8FA;
     border-radius: 50%; }
   .logo__title {
-    letter-spacing: 8px;
-    font-size: 20px; }
+    letter-spacing: 6px;
+    font-size: 18px; }
 
 .navigation__item {
-  font-size: 20px;
+  font-size: 18px;
   margin-left: 22px;
   letter-spacing: 1.4px;
   transition: color .2s ease; }
@@ -107,7 +127,7 @@ table {
     text-transform: uppercase;
     color: #F7F8FA;
     font-weight: 900;
-    font-size: 182px;
+    font-size: 142px;
     letter-spacing: -9px;
     margin-bottom: 46px;
     margin-left: -10px; }
@@ -154,11 +174,11 @@ table {
   .content__subheading {
     text-transform: uppercase;
     font-size: 20px;
-    color: #000;
+    color: #1a262f;
     letter-spacing: 1px;
     margin-bottom: 28px; }
   .content__paragraph {
-    color: #000;
+    color: #000000;
     line-height: 24px;
     font-size: 16px; }
 
@@ -206,7 +226,8 @@ table {
 
 .active {
   transform: scale(1.1);
-  opacity: 1; }
+  opacity: 1;
+  border: 2px solid #d1d4d5; }
 
 .buttons-container {
   position: absolute;
@@ -238,7 +259,7 @@ table {
     margin-bottom: 28px; }
   .aside-content__paragraph {
     width: 320px;
-    color: #000;
+    color: #000000;
     line-height: 24px; }
 
 .bonus-content {
@@ -256,11 +277,11 @@ table {
   .bonus-content__subheading {
     text-transform: uppercase;
     font-size: 20px;
-    color: #000;
+    color: #1a262f;
     letter-spacing: 1px;
     margin-bottom: 24px; }
   .bonus-content__paragraph {
-    color: #000;
+    color: #000000;
     line-height: 24px;
     font-size: 18px;
     padding-bottom: 18px; }
@@ -270,38 +291,28 @@ table {
   color: #F7F8FA; }
   .footer__container {
     margin: 0 auto;
-    border: 1px solid red;
     padding: 24px 0;
-    max-width: 1336px;
+    max-width: 1280px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center; }
-  .footer__logo {
-    width: 60px;
-    height: 60px;
-    line-height: 50px;
-    text-align: center;
-    font-size: 36px;
-    margin-right: 30px;
-    border: 2px solid #F7F8FA;
-    border-radius: 50%; }
 
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth; }
+.footer-logo {
+  width: 60px;
+  height: 60px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 36px;
+  margin-right: auto;
+  border: 2px solid #F7F8FA;
+  border-radius: 50%;
+  transition: all .3s; }
+  .footer-logo:hover {
+    color: #00427C;
+    font-weight: 700;
+    background-color: #d1d4d5;
+    cursor: pointer; }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit; }
-
-body {
-  font-family: 'Lato', sans-serif; }
-
-p {
-  font-family: 'EB Garamond', serif;
-  font-size: 18px; }
-
-a {
-  text-decoration: none;
-  color: inherit; }
+.copyright {
+  margin-left: 22px;
+  color: #d1d4d5; }
