--- a/src/scss/modules/_content.scss
+++ b/src/scss/modules/_content.scss
@@ -14,7 +14,7 @@
     &__subheading {
         text-transform: uppercase;
         font-size: 20px;
-        color: $neutral;
+        color: $neutralDark;
         letter-spacing: 1px;
         margin-bottom: 28px;
     }
