--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,13 +1,14 @@
 .header {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('./../assets/main-img.jpg');
     background-size: cover;
     margin-bottom: 120px;
+    // padding-bottom: 140px;
     &__container {
         // background-image: linear -gradient(rgba(0, 66, 123, .8),rgba(0, 66, 123, 0)); 
-        margin: 0 auto 184px;
-        max-width: 1336px;
+        margin: 0 auto 144px;
+        max-width: 1280px;
         padding-top: 24px;
         color: $mainFont;
         display: flex;
@@ -31,14 +32,14 @@
         border-radius: 50%;
     }
     &__title {
-        letter-spacing: 8px;
-        font-size: 20px;    
+        letter-spacing: 6px;
+        font-size: 18px;    
     }
 }
 
 .navigation {
     &__item {
-        font-size: 20px;
+        font-size: 18px;
         margin-left: 22px;
         letter-spacing: 1.4px;
         transition: color .2s ease;
@@ -65,7 +66,8 @@
         text-transform: uppercase;
         color: $mainFont;
         font-weight: 900;
-        font-size: 182px;
+        // font-size: 182px;
+        font-size: 142px;
         letter-spacing: -9px;
         margin-bottom: 46px;
         margin-left: -10px;
