--- a/src/scss/modules/_bonus-content.scss
+++ b/src/scss/modules/_bonus-content.scss
@@ -1,5 +1,5 @@
 .bonus-content {
-    max-width: 1336px;
+    max-width: 1280px;
     padding-right: 200px;
     margin: 0 auto;
     text-align: left;
@@ -21,7 +21,7 @@
     &__paragraph {
         color: $neutral;
         line-height: 24px;
-        font-size: 18px;
+        // font-size: 18px;
         padding-bottom: 18px;
     }
 }
