lots of changes 2

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -9,6 +9,7 @@
 
         > .img-viewer {
             width: 58%;
+            position: relative;
 
             > .thumbnails {
                 display: flex;
@@ -26,10 +27,6 @@
             }
         }
     }
-
-    // &__first {
-
-    // }
 
     &__second {
         > .container > aside {
