--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     color: $almostWhite;
     margin-bottom: $sectionMargin;
+    overflow: hidden;
     
     > .container {
         position: relative;
