--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,12 +14,16 @@
 @import 'components/button';
 @import 'components/container';
 @import 'components/image';
+@import 'components/arrow';
+@import 'components/logo';
+@import 'components/navigation';
 
 // LAYOUT
 @import 'layout/header';
 @import 'layout/hero';
 @import 'layout/content';
 @import 'layout/gallery';
+@import 'layout/footer';
 
 
 
