--- a/src/css/main.css
+++ b/src/css/main.css
@@ -119,34 +119,61 @@ img {
     img.thumbnails--item:last-child {
       margin-right: 0; }
 
+.arrow {
+  bottom: 118px;
+  right: -40px;
+  position: absolute;
+  display: flex; }
+  .arrow__item {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    display: block;
+    color: #F7F8FA;
+    background-color: #00427C; }
+    .arrow__item:hover {
+      box-shadow: 2px 2px #d1d4d5;
+      cursor: pointer; }
+
+.gallery__second .arrow {
+  left: -40px; }
+
+.logo {
+  color: #F7F8FA;
+  display: flex;
+  align-items: center; }
+  .logo__icon {
+    width: 48px;
+    height: 48px;
+    line-height: 44px;
+    text-align: center;
+    border: 2px solid #F7F8FA;
+    border-radius: 50%;
+    font-size: 28px; }
+  .logo__brand {
+    margin-left: 20px;
+    letter-spacing: 8px;
+    font-size: 20px; }
+
+#hero nav > a,
+#footer nav > a {
+  color: #F7F8FA;
+  display: inline-block;
+  padding-left: 28px;
+  font-size: 20px; }
+  #hero nav > a:hover,
+  #footer nav > a:hover {
+    color: #d1d4d5; }
+
 #header {
-  background-image: linear-gradient(rgba(0, 66, 123, 0.8), rgba(0, 66, 123, 0));
-  min-height: 100px; }
+  background-image: linear-gradient(rgba(0, 66, 123, 0.8), rgba(0, 66, 123, 0)); }
   #header > .container {
+    padding: 26px 0;
     width: 1336px;
-    line-height: 100px;
     display: flex;
-    justify-content: space-between; }
-    #header > .container > .logo {
-      color: #F7F8FA;
-      font-size: 20px;
-      letter-spacing: 4px; }
-      #header > .container > .logo > .icon {
-        display: inline-block;
-        width: 48px;
-        height: 48px;
-        line-height: 44px;
-        text-align: center;
-        border: 2px solid #F7F8FA;
-        border-radius: 50%;
-        font-size: 28px;
-        margin-right: 20px;
-        font-weight: 700; }
-    #header > .container > nav > a {
-      color: #F7F8FA;
-      display: inline-block;
-      padding-left: 28px;
-      font-size: 20px; }
+    justify-content: space-between;
+    align-items: center; }
 
 #hero {
   height: 100vh;
@@ -154,7 +181,8 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   color: #F7F8FA;
-  margin-bottom: 116px; }
+  margin-bottom: 116px;
+  overflow: hidden; }
   #hero > .container {
     position: relative;
     padding: 160px 0;
@@ -208,7 +236,8 @@ img {
     display: flex;
     align-items: flex-start; }
     .gallery > .container > .img-viewer {
-      width: 58%; }
+      width: 58%;
+      position: relative; }
       .gallery > .container > .img-viewer > .thumbnails {
         display: flex;
         justify-content: space-between;
@@ -221,3 +250,20 @@ img {
   .gallery__second > .container > aside {
     padding-left: 20px;
     padding-right: 172px; }
+
+#footer {
+  padding: 32px 0;
+  background-color: #1a262f; }
+  #footer > .container {
+    width: 1336px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; }
+    #footer > .container > .logo {
+      margin-right: auto; }
+      #footer > .container > .logo__icon {
+        color: red; }
+    #footer > .container > .copyright {
+      margin-left: 28px;
+      color: #d1d4d5;
+      font-size: 14px; }
