--- a/src/sass/libs/_variables.scss
+++ b/src/sass/libs/_variables.scss
@@ -1,8 +1,10 @@
 $almostWhite: #F7F8FA;
-$headerBlue: #00427C;
-// $neutral: #000000;
+$headerBlue: #004777;
 $neutralDark: #1a262f;
 $greyCreme: #d1d4d5;
+$trueGrey: #aaa;
+
+$button: #003355;
 
 $wideWidth: 1376px;
 $bigWidth: 1336px;
