--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -4,7 +4,8 @@
         color: $almostWhite;
         display: inline-block;
         padding-left: 28px;
-        font-size: 20px;
+        font-size: 18px;
+        letter-spacing: 2px;
         &:hover {
             color: $greyCreme;
         }
